--- a/Source/view.html
+++ b/Source/view.html
@@ -2735,15 +2735,16 @@ body.addEventListener("keydown", function () {
 		event.preventDefault();
 		callSaveAs();
 	}*/
-	else if ((event.ctrlKey || event.metaKey) && (event.key === "w" || event.key === "W")) {
+	else if ((event.ctrlKey || event.metaKey) && (!event.shiftKey) && (event.key === "w" || event.key === "W")) {
 		event.preventDefault();
 		callClose();
 	}
-	else if ((event.ctrlKey || event.metaKey) && (event.key === "d" || event.key === "D")) {
+	else if ((event.ctrlKey || event.metaKey) && (!event.shiftKey) && (event.key === "d" || event.key === "D")) {
 		event.preventDefault();
 		switchDark();
 	}
-	else if (event.ctrlKey || event.metaKey) {
+	else if ((event.ctrlKey || event.metaKey) && (event.key !== "x" && event.key !== "c" && event.key !== "v" &&
+		event.key !== "a" && event.key !== "v" && event.key !== "z" && event.key !== "y")) {
 		event.preventDefault();
 	}
 });
