--- a/Source/view.html
+++ b/Source/view.html
@@ -2743,8 +2743,8 @@ body.addEventListener("keydown", function () {
 		event.preventDefault();
 		switchDark();
 	}
-	else if ((event.ctrlKey || event.metaKey) && (event.key !== "x" && event.key !== "c" && event.key !== "v" &&
-		event.key !== "a" && event.key !== "v" && event.key !== "z" && event.key !== "y")) {
+	else if ((event.ctrlKey || event.metaKey) && (event.key !== "x" && event.key !== "c" && event.key !== "v" && event.key !== "a" &&
+		event.key !== "z" && event.key !== "y")) {
 		event.preventDefault();
 	}
 });
