--- a/Source/view.html
+++ b/Source/view.html
@@ -2743,8 +2743,9 @@ body.addEventListener("keydown", function () {
 		event.preventDefault();
 		switchDark();
 	}
-	else if ((event.ctrlKey || event.metaKey) && (event.key !== "x" && event.key !== "c" && event.key !== "v" && event.key !== "a" &&
-		event.key !== "z" && event.key !== "y")) {
+	else if ((event.ctrlKey || event.metaKey || event.altKey) && (event.key !== "x" && event.key !== "X" && event.key !== "c" && event.key !== "C" &&
+		event.key !== "v" && event.key !== "V" && event.key !== "a" && event.key !== "A" &&
+		event.key !== "z" && event.key !== "Z" && event.key !== "y" && event.key !== "Y" || event.shiftKey)) {
 		event.preventDefault();
 	}
 });
